# model_training

./: .gitattributes  .gitignore  Explanation.md  README.md  explanation.md  pyproject.toml  requirements.txt
Model/: modelo_xgboost.pkl
Models/: logistic_model.pkl  modelo_entrenado.pkl  modelo_entrenado1.pkl  modelo_entrenado3.pkl  random_forest_model.pkl
Notebooks/: 001_E.D.A.ipynb  001_EDA.ipynb  002_Model.ipynb  002_model_training.ipynb  011_EDA.ipynb  EDA.ipynb  EDA_.ipynb  Model.ipynb
artifacts/models/: model.pkl
model/: modelo_xgboost.pkl  top_model_XGBoost.pkl  xgboost_model.pkl
models/: model.pkl
morales-varela/: .gitignore  explanation.md  requirements.txt
morales-varela/model/: best_model_XGB Classifier.pkl
morales-varela/notebook/: 000_EDA.ipynb  002_modeltraining.ipynb
notebook/: EDA.ipynb  model_training.ipynb
notebooks/: 001_EDA.ipynb  002_model_training.ipynb  002_model_trainning.ipynb  01_EDA.ipynb  02_model_training.ipynb
src/utils/: analysis_functions.py
