[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["santiago-04 <santiago.gomez.castro.04@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
