[tool.poetry]
name = "model-training"
version = "0.1.0"
description = "A data processing and machine learning project involving data cleaning, model training, and evaluation. The project follows a structured approach to handle large datasets, build predictive models, and save the best model using pickle (.pkl) for future use."
authors = ["David Alejandro Cajiao Lazt <123507601+DCajiao@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
scipy = "^1.14.1"
numpy = "^2.1.2"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
