[tool.poetry]
name = "model-training"
version = "0.1.1"
description = "This project is an exercise to showcase the skills acquired in the ETL class."
authors = ["sebas1193,juanruizing"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
notebook = "^7.2.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
